[package]
name = "ironjson"
version = "0.1.0"
edition = "2021"
authors = ["IronJSON"]
description = "Edge JSON Accelerator for Cloudflare Workers"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.4", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
